FLSAM ChangeLog

<Time in future> v 0.42
 * Added method for plotting FLSAMs.
 * Added method for plotting FLSAM/FLSAMs together with a single FLStock
 * Added method for plotting two FLSAM objects in one command
 * Passed ... option to plotting methods, allowing for customisation of plots

2012-01-30 v 0.41
 * Increased SAM timeout to 7200s (120 mins)
 * Split runSAM() functionality out of FLSAM() into separate function
 * Fixed bug in situations where all states are bound together 

2011-11-11 v 0.40
 * Help files all round! (Issue 13) 
 * Addition of FLSAMs plural class (Issue 14)
 * Autoconfiguration in FLSAM.control() now has the option of taking a
   reasonable first guess at a configuration, or leaving configuration
   completely blank (see "default" argument). (Issue 11)
 * Fixed bug in FLR2SAM that was not writing obs.dat correctly for SSB indices
 * Redefined accessor functions for ssb, tsb, rec, fbar to return a data frame
   rather than the previous FLQuant objects. Added n, f, and catch accessors. 
 * Added looi() function for doing leave-one-in/leave-one-out runs, and a
   retro function for doing retrospective runs (Issues 16 and 28)
 * All accessor functions methods are overloaded for both FLSAM and FLSAMs objects.
 * Standardised return format of accessor functions, including output of CVs
 * power.law.exps() accessor function added
 * Catchabilities, obs.var and power.law.exps accessor functions now return
   parameters for SSB indices in addition to number-at-age indices. (Issue
   12). Methods also overloaded for FLSAMs objects 
 * A "Weclome to SAM message", complete with health warning
 * Addition of NAMESPACE - required from R 2.14.0 onwards
 * Validity checks to ensure that the FLR data is configured 
   correctly (Issue 7)
 * Overloaded methods for merge, "+" and AIC for FLSAMs
 * Multiple objects can be supplied to lr.test() either as FLSAM objects, or
   as an FLSAMs object (Issue 10)
 * Addition of cheat sheet to the wiki (Issue 15)